--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                         <div class="dropdown-menu-button"><i class="zmdi zmdi-assignment-o zmdi-hc-fw"></i>&nbsp;&nbsp;
                             Cuestionario <i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
                         <ul class="list-unstyled">
-                            <li><a href="#"><i class="zmdi zmdi-book zmdi-hc-fw"></i>&nbsp;&nbsp; Crear
+                            <li><a href="cuestionario.html"><i class="zmdi zmdi-book zmdi-hc-fw"></i>&nbsp;&nbsp; Crear
                                     cuestionario</a></li>
 
                         </ul>
