--- a/cuestionario.html
+++ b/cuestionario.html
@@ -46,7 +46,7 @@
                             <li><a href="listadmin.html"><i
                                         class="zmdi zmdi-assignment-account zmdi-hc-fw"></i>&nbsp;&nbsp; Ver
                                     operadores</a></li>
-                            <li><a href="catalog.html"><i class="zmdi zmdi-bookmark-outline zmdi-hc-fw"></i>&nbsp;&nbsp;
+                            <li><a href="listaresultados.html"><i class="zmdi zmdi-bookmark-outline zmdi-hc-fw"></i>&nbsp;&nbsp;
                                     Ver historial de resultados</a></li>
                         </ul>
                     </li>
