--- a/listaresultados.html
+++ b/listaresultados.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-    <title>Inicio</title>
+    <title>Empresa</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/sweet-alert.min.js"></script>
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.11.2.min.js"><\/script>')</script>
     <script src="js/modernizr.js"></script>
@@ -33,7 +35,7 @@
                 <figure>
                     <div id="profile"></div>
                 </figure>
-                <p class="text-center" style="padding-top: 15px;"> <span id="nombre_empresa"></span></p>
+                <p class="text-center" style="padding-top: 15px;"><span id="nombre_empresa"></p>
             </div>
             <div class="full-reset nav-lateral-list-menu">
                 <ul class="list-unstyled">
@@ -80,7 +82,7 @@
                     <img src="assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box">
                 </figure>
                 <li style="color:#fff; cursor:default;">
-                    <span class="all-tittles"> <span id="nombre_representante"></span></span>
+                    <span class="all-tittles"><span id="nombre_representante"></span></span>
                 </li>
                 <li class="tooltips-general exit-system-button" data-href="index.html" data-placement="bottom"
                     title="Salir del sistema">
@@ -94,16 +96,28 @@
         </nav>
         <div class="container">
             <div class="page-header">
-                <h1 class="all-tittles">Nuestros operadores <small>Inicio</small></h1>
+                <h1 class="all-tittles">Gaseoducto <small>Historial de resultados</small></h1>
             </div>
         </div>
-        <section class="full-reset text-center" style="padding: 40px 0;">
-            <article class="tile">
-                <div class="tile-icon full-reset"><i class="zmdi zmdi-face"></i></div>
-                <div class="tile-name all-tittles">Operadores</div>
-                <div class="tile-num full-reset"><span id="cant_oper"></div>
-            </article>
-        </section>
+
+        <div class="container-fluid">
+            <h2 class="text-center all-tittles">Resultados</h2>
+            <br>
+            <center>
+                <table style="width:100%" id="ex-table">
+                    <thead>
+                        <tr id="tr">
+                            <th>Nombre:</th>
+                            <th>Correctas:</th>
+                            <th>Malas:</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tabla">
+                    </tbody>
+                </table>
+            </center>
+
+        </div>
         <footer class="footer full-reset">
             <div class="container-fluid">
                 <div class="row">
@@ -118,7 +132,6 @@
                         <ul class="list-unstyled">
                             <li><i class="zmdi zmdi-check zmdi-hc-fw"></i>&nbsp; Mauricio Maldonado
                             <li><i class="zmdi zmdi-check zmdi-hc-fw"></i>&nbsp; Kebin Ramirez
-
                         </ul>
                     </div>
                 </div>
@@ -130,6 +143,10 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-analytics.js"></script>
     <script>
         // Your web app's Firebase configuration
         var firebaseConfig = {
@@ -144,23 +161,35 @@
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
     </script>
     <script>
         var db = firebase.database();
-        var ref = db.ref("operadores");
-        let cant = 0;
+        var ref = db.ref("respuestas");
 
-        $("#cant_oper").html(0 + "");
+        var table = document.getElementById("tabla");
+
+        //limpia la tabla
+        table.innerHTML = "";
+
+        //con esta función recorre todos los datos almacenados en FB ordenados por mi child(tipo)
+
         ref.orderByChild("empresa").equalTo(localStorage.uid).on("child_added", function (snapshot) {
+            //repite el proceso como cuantas referencias encuentre y los asigna a la lista "d"
             var d = snapshot.val();
 
             {
-                console.log(cant)
-                cant = cant + 1;
-                $("#cant_oper").html(cant + "");
+                var row = table.insertRow(0);
+                var cell1 = row.insertCell(0);
+                var cell2 = row.insertCell(1);
+                var cell3 = row.insertCell(2);
+
+                // asigna a las celdas el valir del Child especificado
+                cell1.innerHTML = d.nombre;
+                cell2.innerHTML = d.correctas;
+                cell3.innerHTML = d.malas;
             }
         });
-
     </script>
     <script>
         nombre_empresa = "";
